--- a/Vocable/Features/Settings/Edit Categories/EditCategoriesCompactCollectionViewCell.xib
+++ b/Vocable/Features/Settings/Edit Categories/EditCategoriesCompactCollectionViewCell.xib
@@ -31,9 +31,7 @@
                             <constraint firstAttribute="height" constant="54" id="FOm-kP-JDa"/>
                         </constraints>
                         <color key="tintColor" name="DefaultFontColor"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="image" keyPath="buttonImage" value="chevron.down" catalog="system"/>
-                        </userDefinedRuntimeAttributes>
+                        <state key="normal" image="chevron.down" catalog="system"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yIe-C4-EHn" userLabel="MoveUpButton" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
                         <rect key="frame" x="20" y="98" width="84" height="54"/>
@@ -42,9 +40,7 @@
                             <constraint firstAttribute="width" constant="84" id="m2b-i3-ggR"/>
                         </constraints>
                         <color key="tintColor" name="DefaultFontColor"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="image" keyPath="buttonImage" value="chevron.up" catalog="system"/>
-                        </userDefinedRuntimeAttributes>
+                        <state key="normal" image="chevron.up" catalog="system"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PfR-1l-Qp7" userLabel="ShowCategoryDetailButton" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
                         <rect key="frame" x="636" y="71" width="48" height="54"/>
@@ -53,9 +49,7 @@
                             <constraint firstAttribute="width" constant="48" id="iZI-pH-Vfy"/>
                         </constraints>
                         <color key="tintColor" name="DefaultFontColor"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="image" keyPath="buttonImage" value="chevron.right" catalog="system"/>
-                        </userDefinedRuntimeAttributes>
+                        <state key="normal" image="chevron.right" catalog="system"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1. General" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3t9-YV-add" userLabel="CategoryName">
                         <rect key="frame" x="20" y="52" width="128" height="34"/>
