--- a/Vocable/Features/Settings/Views/SettingsCollectionViewCell.xib
+++ b/Vocable/Features/Settings/Views/SettingsCollectionViewCell.xib
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,41 +10,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="H3V-Kp-Gwg" customClass="SettingsCollectionViewCell" customModule="Vocable" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="H3V-Kp-Gwg" customClass="SettingsCollectionViewCell" customModule="Vocable" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="523" height="99"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Uen-IX-0c2">
                 <rect key="frame" x="0.0" y="0.0" width="523" height="99"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="Bhu-uK-cWQ">
-                        <rect key="frame" x="20" y="0.0" width="483" height="99"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="0yM-1f-UdS">
-                                <rect key="frame" x="0.0" y="37.5" width="436.5" height="24"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
-                                <color key="textColor" name="DefaultFontColor"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="heightClass=compact-widthClass=compact">
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                </variation>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="r0N-lM-t9V">
-                                <rect key="frame" x="460.5" y="35" width="22.5" height="29.5"/>
-                                <color key="tintColor" name="DefaultFontColor"/>
-                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="28" weight="bold"/>
-                            </imageView>
-                        </subviews>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0yM-1f-UdS">
+                        <rect key="frame" x="20" y="16" width="452.5" height="67"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                        <color key="textColor" name="DefaultFontColor"/>
+                        <nil key="highlightedColor"/>
+                        <variation key="heightClass=compact-widthClass=compact">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                        </variation>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" insetsLayoutMarginsFromSafeArea="NO" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="r0N-lM-t9V">
+                        <rect key="frame" x="480.5" y="2" width="22.5" height="95"/>
+                        <color key="tintColor" name="DefaultFontColor"/>
+                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="28" weight="bold"/>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Bhu-uK-cWQ" firstAttribute="top" secondItem="Uen-IX-0c2" secondAttribute="top" id="9DT-II-c7B"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Bhu-uK-cWQ" secondAttribute="trailing" id="SYr-pJ-Oun"/>
-                    <constraint firstItem="Bhu-uK-cWQ" firstAttribute="leading" secondItem="Uen-IX-0c2" secondAttribute="leadingMargin" id="fRG-at-Ius"/>
-                    <constraint firstAttribute="bottom" secondItem="Bhu-uK-cWQ" secondAttribute="bottom" id="prr-Ny-G8f"/>
+                    <constraint firstItem="r0N-lM-t9V" firstAttribute="top" secondItem="Uen-IX-0c2" secondAttribute="top" id="5O8-cj-TcK"/>
+                    <constraint firstAttribute="bottom" secondItem="r0N-lM-t9V" secondAttribute="bottom" id="9rh-ln-dxZ"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="0yM-1f-UdS" secondAttribute="bottom" id="FG6-Gc-OrN"/>
+                    <constraint firstItem="r0N-lM-t9V" firstAttribute="trailing" secondItem="Uen-IX-0c2" secondAttribute="trailingMargin" id="Kmm-6W-lJt"/>
+                    <constraint firstItem="0yM-1f-UdS" firstAttribute="top" secondItem="Uen-IX-0c2" secondAttribute="topMargin" id="OXs-FY-H5z"/>
+                    <constraint firstItem="0yM-1f-UdS" firstAttribute="leading" secondItem="Uen-IX-0c2" secondAttribute="leadingMargin" id="lFu-gE-nxv"/>
+                    <constraint firstItem="r0N-lM-t9V" firstAttribute="leading" secondItem="0yM-1f-UdS" secondAttribute="trailing" constant="8" id="tdv-8C-nM2"/>
                 </constraints>
                 <edgeInsets key="layoutMargins" top="16" left="16" bottom="16" right="16"/>
             </collectionViewCellContentView>
