--- a/Vocable/Features/Settings/Edit Categories/EditCategoryDetailsHeaderCollectionViewCell.xib
+++ b/Vocable/Features/Settings/Edit Categories/EditCategoryDetailsHeaderCollectionViewCell.xib
@@ -18,13 +18,13 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Oy-Td-pUY">
-                        <rect key="frame" x="0.0" y="46.5" width="147.5" height="41"/>
+                        <rect key="frame" x="0.0" y="93" width="147.5" height="41"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
                         <color key="textColor" name="DefaultFontColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="48G-ra-bCk" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                        <rect key="frame" x="305" y="46.5" width="41" height="41"/>
+                        <rect key="frame" x="305" y="93" width="41" height="41"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="48G-ra-bCk" secondAttribute="height" multiplier="1:1" id="SWc-Gb-aIC"/>
                             <constraint firstAttribute="height" constant="41" id="zuz-z2-g9K"/>
@@ -39,8 +39,8 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="48G-ra-bCk" secondAttribute="trailing" id="84j-e9-XoT"/>
                 <constraint firstItem="7Oy-Td-pUY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="FgR-lF-rLd"/>
-                <constraint firstItem="48G-ra-bCk" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="HQr-90-ToW"/>
-                <constraint firstItem="7Oy-Td-pUY" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="akk-Ec-lN2"/>
+                <constraint firstAttribute="bottom" secondItem="7Oy-Td-pUY" secondAttribute="bottom" id="Vtn-gY-E5Q"/>
+                <constraint firstAttribute="bottom" secondItem="48G-ra-bCk" secondAttribute="bottom" id="wlo-yo-vgd"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="346" height="134"/>
