--- a/Vocable/Features/Settings/Edit Categories/EditCategoriesDefaultCollectionViewCell.xib
+++ b/Vocable/Features/Settings/Edit Categories/EditCategoriesDefaultCollectionViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="yFj-S9-Vtf" customClass="EditCategoriesDefaultCollectionViewCell" customModule="Vocable" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="" id="yFj-S9-Vtf" customClass="EditCategoriesDefaultCollectionViewCell" customModule="Vocable" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="708" height="178"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="PX7-fo-08L">
@@ -18,24 +18,24 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zy9-iu-ouW" userLabel="TopSeparator">
-                        <rect key="frame" x="20" y="44" width="668" height="2"/>
+                        <rect key="frame" x="20" y="0.0" width="668" height="2"/>
                         <color key="backgroundColor" name="DefaultCellBackground"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="UpI-RP-gtG"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hWY-nm-Hv6" userLabel="BottomSeparator">
-                        <rect key="frame" x="20" y="142" width="668" height="2"/>
+                        <rect key="frame" x="20" y="176" width="668" height="2"/>
                         <color key="backgroundColor" name="DefaultCellBackground"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="tSY-ue-dhy"/>
                         </constraints>
                     </view>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="e6f-uI-tYv">
-                        <rect key="frame" x="20" y="52" width="668" height="84"/>
+                        <rect key="frame" x="20" y="8" width="668" height="162"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yIe-C4-EHn" userLabel="MoveUpButton" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="15" width="84" height="54"/>
+                                <rect key="frame" x="0.0" y="54" width="84" height="54"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="54" id="eF3-ax-GmT"/>
                                     <constraint firstAttribute="width" constant="84" id="m2b-i3-ggR"/>
@@ -45,7 +45,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ieb-WK-NlS" userLabel="MoveDownButton" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="92" y="15" width="84" height="54"/>
+                                <rect key="frame" x="92" y="54" width="84" height="54"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="84" id="DnU-vb-Ln9"/>
                                     <constraint firstAttribute="height" constant="54" id="FOm-kP-JDa"/>
@@ -55,13 +55,13 @@
                                 </state>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1. General" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3t9-YV-add" userLabel="CategoryName">
-                                <rect key="frame" x="184" y="25.5" width="428" height="33.5"/>
+                                <rect key="frame" x="184" y="64.5" width="428" height="33.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                 <color key="textColor" name="DefaultFontColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PfR-1l-Qp7" userLabel="ShowCategoryDetailButton" customClass="GazeableButton" customModule="Vocable" customModuleProvider="target">
-                                <rect key="frame" x="620" y="15" width="48" height="54"/>
+                                <rect key="frame" x="620" y="54" width="48" height="54"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="54" id="Gqm-Up-tsr"/>
                                     <constraint firstAttribute="width" constant="48" id="iZI-pH-Vfy"/>
@@ -85,7 +85,7 @@
                     <constraint firstAttribute="bottomMargin" secondItem="hWY-nm-Hv6" secondAttribute="bottom" id="v6b-vv-Ztm"/>
                     <constraint firstItem="e6f-uI-tYv" firstAttribute="leading" secondItem="PX7-fo-08L" secondAttribute="leadingMargin" id="znN-zJ-DrT"/>
                 </constraints>
-                <edgeInsets key="layoutMargins" top="0.0" left="8" bottom="0.0" right="8"/>
+                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
             </collectionViewCellContentView>
             <size key="customSize" width="708" height="178"/>
             <connections>
